--- a/html/mike/SmartCon/smartcon.html
+++ b/html/mike/SmartCon/smartcon.html
@@ -3,35 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Connection Mike Harmsen</title>
+    <title>Smart Connection Arian Hazrati</title>
     <link rel="stylesheet" href="../../../css/base.css">
     <link rel="stylesheet" href="../../../css/mike.css">
     <link rel="stylesheet" href="smartcon.css">
 </head>
 <body>
     <div class="wrapper">
+        <!-- Header met profielfoto en navigatieknoppen -->
         <header>
-            <a href="../mike.html" class="back-button">← Terug naar homepagina</a>
-            <h1>Smart Connection Mike Harmsen</h1>
-            <div class="profile-pic">
-                <img src="../../../images/mike.jpg" alt="Mike Harmsen">
+            <div class="header-left">
+                <!-- Profielfoto en naam naast elkaar -->
+                <img src="../../../images/arian.jpg" alt="Arian Hazrati" class="profile-pic">
+                <h1>Arian Hazrati</h1>
+                <div class="header-center">
+                    <nav class="navbar">
+                        <ul>
+                            <li><a href="../mike.html">Terug</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="#smart-technology">Smart Technology</a></li>
-                    <li><a href="smartcon.html" class="active">Smart Connection</a></li>
-                    <li><a href="#smart-business">Smart Business</a></li>
-                </ul>
-            </nav>
+            <div class="header-center">
+                <nav class="navbar">
+                    <ul>
+                        <li><a href="#smart-technology">Smart Technology</a></li>
+                        <li><a href="smartcon.html" class="active">Smart Connection</a></li>
+                        <li><a href="#smart-business">Smart Business</a></li>
+                    </ul>
+                </nav>
+            </div>
+            
         </header>
 
         <main>
             <div class="assignment-container">
                 <!-- Assignment 1: Weather Section -->
                 <section class="assignment">
-                    <h2>Weer API</h2>
+                    <h2>Weather API</h2>
                     <div class="city-selection">
-                        <h3>Selecteer een stad om het weerbericht te zien</h3>
+                        <h3>Kies stad </h3>
                         <select id="city-select" onchange="fetchWeather()">
                             <option value="Amsterdam,NL">Amsterdam, Netherlands</option>
                             <option value="London,GB">London, United Kingdom</option>
@@ -41,16 +52,16 @@
                         </select>
                     </div>
                     <div id="weather-container">
-                        <p id="city-name">Stad: </p>
-                        <p id="weather-description">Weer: </p>
-                        <p id="temperature">Temperatuur: </p>
-                        <p id="humidity">Lucht vochtigheid: </p>
+                        <p id="city-name">City: </p>
+                        <p id="weather-description">Weather: </p>
+                        <p id="temperature">Temperature: </p>
+                        <p id="humidity">Humidity: </p>
                     </div>
                 </section>
 
                 <!-- NASA Picture of the Day Section -->
                 <section class="assignment">
-                    <h2>NASA Foto van de dag</h2>
+                    <h2>NASA  Picture of the day</h2>
                     <div>
                         <label for="nasa-date">Selecteer een datum:</label>
                         <input type="date" id="nasa-date" max="2024-12-31" onchange="fetchNasaPhoto()">
@@ -62,16 +73,6 @@
                     </div>
                 </section>
 
-                <!-- Assignment 3: Spotify API Integration -->
-                <section class="assignment">
-                    <h2>Spotify's today's top hits</h2>
-                    <button onclick="getPlaylist()">Check de hits!</button>
-                    <div id="playlist-info">
-                        <h3 id="playlist-name"></h3>
-                        <p id="playlist-description"></p>
-                        <div id="playlist-tracks"></div>
-                    </div>
-                </section>
             </div>
         </main>
 
@@ -133,59 +134,6 @@
                 fetchWeather();
                 fetchNasaPhoto();
             };
-
-            // Spotify API Client Credentials Flow
-            const clientId = 'b99105a96bcd4cc4941c779c09514e6b'; // Your client ID
-            const clientSecret = '0488d857b21c4d9abbfd5ba7bdd79a8b'; // Your client secret
-
-            async function getAccessToken() {
-                const url = 'https://accounts.spotify.com/api/token';
-                const headers = new Headers({
-                    'Authorization': 'Basic ' + btoa(clientId + ':' + clientSecret),
-                    'Content-Type': 'application/x-www-form-urlencoded'
-                });
-
-                const body = 'grant_type=client_credentials';
-
-                const response = await fetch(url, {
-                    method: 'POST',
-                    headers: headers,
-                    body: body
-                });
-
-                const data = await response.json();
-
-                return data.access_token; // Return the access token
-            }
-
-            // Function to fetch playlist info
-            async function getPlaylist() {
-                const token = await getAccessToken();
-                const playlistId = '37i9dQZF1DXcBWIGoYBM5M'; // Replace with your playlist ID
-
-                const response = await fetch(`https://api.spotify.com/v1/playlists/${playlistId}`, {
-                    headers: {
-                        'Authorization': `Bearer ${token}`
-                    }
-                });
-
-                const data = await response.json();
-
-                // Display playlist name and description
-                document.getElementById('playlist-name').innerText = data.name;
-                document.getElementById('playlist-description').innerText = data.description;
-
-                // Display playlist tracks
-                const tracksContainer = document.getElementById('playlist-tracks');
-                tracksContainer.innerHTML = ''; // Clear previous tracks
-
-                data.tracks.items.forEach((item, index) => {
-                    const track = item.track;
-                    const trackElement = document.createElement('p');
-                    trackElement.innerHTML = `<b>${index + 1}. ${track.name}</b> by ${track.artists.map(artist => artist.name).join(', ')}`;
-                    tracksContainer.appendChild(trackElement);
-                });
-            }
         </script>
     </div>
 </body>
