--- a/html/mike/mike.html
+++ b/html/mike/mike.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Mike Harmsen</title>
+    <title>Portfolio Arian Hazrati</title>
     <link rel="stylesheet" href="../../css/base.css">
     <link rel="stylesheet" href="../../css/mike.css">
 </head>
@@ -12,7 +12,14 @@
         <header>
             <div class="header-left">
                 <img src="../../images/arian.jpg" alt="Mike Harmsen" class="profile-pic">
-                <h1>Portfolio Mike Harmsen</h1>
+                <h1>Portfolio Arian Hazrati</h1>
+                <div class="header-center">
+                    <nav class="navbar">
+                        <ul>
+                            <li><a href="../index.html">Home</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
             <div class="header-center">
                 <nav class="navbar">
