--- a/html/mike/SmartCon/smartcon.html
+++ b/html/mike/SmartCon/smartcon.html
@@ -15,7 +15,7 @@
             <div class="header-left">
                 <!-- Profielfoto en naam naast elkaar -->
                 <img src="../../../images/arian.jpg" alt="Arian Hazrati" class="profile-pic">
-                <h1>Arian Hazrati</h1>
+                <h1>Portfolio Arian Hazrati</h1>
                 <div class="header-center">
                     <nav class="navbar">
                         <ul>
@@ -27,9 +27,10 @@
             <div class="header-center">
                 <nav class="navbar">
                     <ul>
-                        <li><a href="#smart-technology">Smart Technology</a></li>
+                        <li><a href="../mike.html">Smart Me</a></li>
+                        <li><a href="../SmartTech/smarttech.html">Smart Technology</a></li>
                         <li><a href="smartcon.html" class="active">Smart Connection</a></li>
-                        <li><a href="#smart-business">Smart Business</a></li>
+                        <li><a href="../SmartBus/smartbus.html">Smart Business</a></li>
                     </ul>
                 </nav>
             </div>
