--- a/html/mike/SmartBus/smartbus.html
+++ b/html/mike/SmartBus/smartbus.html
@@ -4,31 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Arian Hazrati</title>
-    <link rel="stylesheet" href="../../css/base.css">
-    <link rel="stylesheet" href="../../css/mike.css">
+    <link rel="stylesheet" href="../../../css/base.css">
+    <link rel="stylesheet" href="../../../css/mike.css">
 </head>
 <body>
     <div class="wrapper">
         <header>
             <div class="header-left">
-                <img src="../../images/arian.jpg" alt="Mike Harmsen" class="profile-pic">
+                <img src="../../../images/arian.jpg" alt="Arian Hazrati" class="profile-pic">
                 <h1>Portfolio Arian Hazrati</h1>
                 <div class="header-center">
                     <nav class="navbar">
                         <ul>
-                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="../../index.html">Home</a></li>
                         </ul>
                     </nav>
                 </div>
-                <h1>Smart Me</h1>
             </div>
             <div class="header-center">
                 <nav class="navbar">
                     <ul>
-                        <li><a href="mike.html">Smart Me</a></li>
-                        <li><a href="SmartTech/smarttech.html">Smart Technology</a></li>
-                        <li><a href="SmartCon/smartcon.html">Smart Connection</a></li>
-                        <li><a href="SmartBus/smartbus.html">Smart Business</a></li>
+                        <li><a href="../mike.html">Smart Me</a></li>
+                        <li><a href="../SmartTech/smarttech.html">Smart Technology</a></li>
+                        <li><a href="../SmartCon/smartcon.html">Smart Connection</a></li>
+                        <li><a href="smartbus.html">Smart Business</a></li>
                     </ul>
                 </nav>
             </div>
@@ -39,19 +38,6 @@
         
 
         <main>
-            <section class="learning-objectives">
-                <h2>Technische leerdoel</h2>
-                <p><strong>Leerdoel:</strong> Beschrijf hier leerdoel 1</p>
-                <p><strong>Status:</strong> Gehaald ja of nee?</p>
-                <p><strong>Explanation:</strong> Waarom jij denkt dat je het gehaald hebt</p>
-            </section>
-
-            <section class="learning-objectives">
-                <h2>Persoonlijk leerdoel</h2>
-                <p><strong>Leerdoel:</strong> Beschrijf hier leerdoel 2</p>
-                <p><strong>Status:</strong> Gehaald ja of nee?</p>
-                <p><strong>Explanation:</strong> Waarom jij denkt dat je het gehaald hebt</p>
-            </section>
 
             <section class="week-filter">
                 <label for="week-select">Filteren op week:</label>
@@ -66,7 +52,7 @@
             </section>
 
             <section class="weekly-updates">
-                <h2>Wekelijkse updates - Smart Me</h2>
+                <h2>Wekelijkse updates - Smart Business</h2>
 
                 <div class="week-box" id="week1">
                     <div class="week-header">Week 1</div>
@@ -122,7 +108,7 @@
                             Daarnaast hadden we deze dag ook nog de les Smart Me, waarin we begonnen met het creëren van de 0-meting op de competenties.<br>
 
 
-                            <img src="../../images/Competenties.png" alt="Competenties">
+                            <img src="../../../images/Competenties.png" alt="Competenties">
                             <br>
                             Door het maken van dit schema kreeg ik inzicht in hoe ik mezelf op zowel persoonlijk als professioneel gebied nog verder kan ontwikkelen tijdens deze minor. Een goed voorbeeld hiervan is samenwerken in een multidisciplinair team. Dit heb ik nog nooit gedaan, omdat we tijdens mijn opleiding alleen projecten hadden binnen mijn eigen klas.
                             
@@ -137,7 +123,7 @@
                         <p><b>Technology Les: PCB Designen</b><br> Tijdens de technology les moesten we een PCB (Printed Circuit Board) ontwerpen. 
                             <br>
 
-                            <img src="../../images/pcbmike2.png" alt="PCB Mike">
+                            <img src="../../../images/pcbmike2.png" alt="PCB Mike">
 
 
                             <br>
