--- a/html/arian/SmartTech/smarttech.html
+++ b/html/arian/SmartTech/smarttech.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Arian Hazrati</title>
     <link rel="stylesheet" href="../../../css/base.css">
-    <link rel="stylesheet" href="../../../css/mike.css">
+    <link rel="stylesheet" href="../../../css/arian.css">
 </head>
 <body>
     <div class="wrapper">
@@ -24,7 +24,7 @@
             <div class="header-center">
                 <nav class="navbar">
                     <ul>
-                        <li><a href="../mike.html">Smart Me</a></li>
+                        <li><a href="../arian.html">Smart Me</a></li>
                         <li><a href="smarttech.html">Smart Technology</a></li>
                         <li><a href="../SmartCon/smartcon.html">Smart Connection</a></li>
                         <li><a href="../SmartBus/smartbus.html">Smart Business</a></li>
