--- a/html/arian/arian.html
+++ b/html/arian/arian.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Arian Hazrati</title>
     <link rel="stylesheet" href="../../css/base.css">
-    <link rel="stylesheet" href="../../css/mike.css">
+    <link rel="stylesheet" href="../../css/arian.css">
 </head>
 <body>
     <div class="wrapper">
         <header>
             <div class="header-left">
-                <img src="../../images/arian.jpg" alt="Mike Harmsen" class="profile-pic">
+                <img src="../../images/arian.jpg" alt="arian" class="profile-pic">
                 <h1>Portfolio Arian Hazrati</h1>
                 <div class="header-center">
                     <nav class="navbar">
@@ -25,7 +25,7 @@
             <div class="header-center">
                 <nav class="navbar">
                     <ul>
-                        <li><a href="mike.html">Smart Me</a></li>
+                        <li><a href="arian.html">Smart Me</a></li>
                         <li><a href="SmartTech/smarttech.html">Smart Technology</a></li>
                         <li><a href="SmartCon/smartcon.html">Smart Connection</a></li>
                         <li><a href="SmartBus/smartbus.html">Smart Business</a></li>
