--- a/html/index.html
+++ b/html/index.html
@@ -25,8 +25,8 @@
     <!-- Teamsectie blijft, maar naar onder geduwd -->
     <section class="team-section">
      <div class="team-member">
-      <a href="mike/mike.html" target="_blank">
-       <img alt="Mike Harmsen" src="../images/arian.jpg"/>
+      <a href="arian/arian.html" target="_blank">
+       <img alt="arian" src="../images/arian.jpg"/>
       </a>
       <p>
        Arian Hazrati
