--- a/html/arian/arian.html
+++ b/html/arian/arian.html
@@ -136,7 +136,7 @@
                             Daarnaast hadden we deze dag ook nog de les Smart Me, waarin we begonnen met het creëren van de 0-meting op de competenties.<br>
 
 
-                            <img src="../../images/Competenties.png" alt="Competenties">
+                            <img src="../../images/competentie.png" alt="Competenties">
                             <br>
                             Door het maken van dit schema kreeg ik inzicht in hoe ik mezelf op zowel persoonlijk als professioneel gebied nog verder kan ontwikkelen tijdens deze minor. Een goed voorbeeld hiervan is samenwerken in een multidisciplinair team. Dit heb ik nog nooit gedaan, omdat we tijdens mijn opleiding alleen projecten hadden binnen mijn eigen klas.
                             
