--- a/html/bram/bram.html
+++ b/html/bram/bram.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Tijs den Ambtman</title>
+    <title>Portfolio Bram de Weger</title>
     <link rel="stylesheet" href="../../css/base.css">
     <link rel="stylesheet" href="../../css/tijs.css">
 </head>
@@ -11,9 +11,9 @@
     <div class="wrapper">
         <header>
             <a href="../index.html" class="back-button">← Terug naar homepagina</a>
-            <h1>Portfolio Tijs den Ambtman</h1>
+            <h1>Portfolio Bram de Weger</h1>
             <div class="profile-pic">
-                <img src="../../images/tijs.jpg" alt="tijs den Ambtman">
+                <img src="../../images/bram.jpg" alt="bram de weger">
             </div>
             <nav class="navbar">
                 <ul>
