--- a/html/index.html
+++ b/html/index.html
@@ -33,8 +33,8 @@
       </p>
      </div>
      <div class="team-member">
-      <a href="tijs/tijs.html" target="_blank">
-       <img alt="Tijs den Ambtman" src="../images/placeholder.jpg"/>
+      <a href="bram/bram.html" target="_blank">
+       <img alt="Tijs den Ambtman" src="../images/bram.png"/>
       </a>
       <p>
        Bram de Weger
