--- a/html/index.html
+++ b/html/index.html
@@ -1,58 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   Team Home Page
-  </title>
-  <link href="../css/style.css" rel="stylesheet"/>
- </head>
- <body>
-  <div class="wrapper">
-   <header>
-    <h1>
-     Smart Industry
-    </h1>
-   </header>
-   <main>
-    <!-- Nieuwe koptekst toegevoegd -->
-    <section class="welcome-container">
-     <p class="grote-text" section="">
-      Welkom bij Team Agriware
-     </p>
-    </section>
-    <!-- Teamsectie blijft, maar naar onder geduwd -->
-    <section class="team-section">
-     <div class="team-member">
-      <a href="arian/arian.html" target="_blank">
-       <img alt="arian" src="../images/arian.jpg"/>
-      </a>
-      <p>
-       Arian Hazrati
-      </p>
-     </div>
-     <div class="team-member">
-      <a href="bram/bram.html" target="_blank">
-       <img alt="Tijs den Ambtman" src="../images/bram.png"/>
-      </a>
-      <p>
-       Bram de Weger
-      </p>
-     </div>
-    </section>
-    <!-- Groene knop toegevoegd onder teamsectie -->
-    <section class="agriware-button">
-        <a href="info.html" class="btn-green">Wie is Team Agriware?</a>
-    </section>
 
-    
-   </main>
-  </div>
-  <footer>
-   <p>
-    © 2024 Minor Smart Industry
-   </p>
-  </footer>
- </body>
+<head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>
+        Team Home Page
+    </title>
+    <link href="../css/style.css" rel="stylesheet" />
+</head>
+
+<body>
+    <div class="wrapper">
+        <header>
+            <h1>
+                Smart Industry
+            </h1>
+        </header>
+        <main>
+            <!-- Nieuwe koptekst toegevoegd -->
+            <section class="welcome-container">
+                <p class="grote-text" section="">
+                    Welkom bij Team Agriware
+                </p>
+            </section>
+            <!-- Teamsectie blijft, maar naar onder geduwd -->
+            <section class="team-section">
+                <div class="team-member">
+                    <a href="arian/arian.html" target="_blank">
+                        <img alt="arian" src="../images/arian.jpg" />
+                    </a>
+                    <p>
+                        Arian Hazrati
+                    </p>
+                </div>
+                <div class="team-member">
+                    <a href="bram/bram.html" target="_blank">
+                        <img alt="bram" src="../images/bram.png" />
+                    </a>
+                    <p>
+                        Bram de Weger
+                    </p>
+                </div>
+            </section>
+            <!-- Groene knop toegevoegd onder teamsectie -->
+            <section class="agriware-button">
+                <a href="info.html" class="btn-green">Wie is Team Agriware?</a>
+            </section>
+
+
+        </main>
+    </div>
+    <footer>
+        <p>
+            © 2024 Minor Smart Industry
+        </p>
+    </footer>
+</body>
+
 </html>
